# tdp-MVP

./: Project.toe  README.md  pyproject.toml
src/MVP/ExposeableTox/: __init__.py  extExposeableExtension.py  some_relative_data.py
src/tdpMVP/: __init__.py
src/tdpMVP/ExposeableTox/: ExposeableTox.tox  __init__.py
